Added SVGs and svg sprite gulp tasks.

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,10 @@
   
   <title>guh</title>
 
+  <!-- SVG Sprites -->
+  <link rel="stylesheet" href="assets/css/ui/sprite.css">
+  <link rel="stylesheet" href="assets/css/vendor/sprite.css">
+
   <!-- vendor:css -->
   <!-- endinject -->
 
