Don't show grid overlay on default.

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
   <!-- endinject -->
 </head>
 
-<body guh-toggle-grid="show">
+<body guh-toggle-grid="hide">
   <div id="main" ui-view></div>
 
   <!-- vendor:js -->
