Added favicon for mobile (Androi, iOS, Windows Phone) and desktop

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,29 @@
   
   <title>guh</title>
 
+  <!-- Favicon (http://realfavicongenerator.net/) -->
+  <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png?v=QEEbRWmmnY">
+  <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png?v=QEEbRWmmnY">
+  <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png?v=QEEbRWmmnY">
+  <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png?v=QEEbRWmmnY">
+  <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png?v=QEEbRWmmnY">
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png?v=QEEbRWmmnY">
+  <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png?v=QEEbRWmmnY">
+  <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png?v=QEEbRWmmnY">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png?v=QEEbRWmmnY">
+  <link rel="icon" type="image/png" href="/favicon-32x32.png?v=QEEbRWmmnY" sizes="32x32">
+  <link rel="icon" type="image/png" href="/favicon-194x194.png?v=QEEbRWmmnY" sizes="194x194">
+  <link rel="icon" type="image/png" href="/favicon-96x96.png?v=QEEbRWmmnY" sizes="96x96">
+  <link rel="icon" type="image/png" href="/android-chrome-192x192.png?v=QEEbRWmmnY" sizes="192x192">
+  <link rel="icon" type="image/png" href="/favicon-16x16.png?v=QEEbRWmmnY" sizes="16x16">
+  <link rel="manifest" href="/manifest.json?v=QEEbRWmmnY">
+  <link rel="shortcut icon" href="/favicon.ico?v=QEEbRWmmnY">
+  <meta name="apple-mobile-web-app-title" content="guh">
+  <meta name="application-name" content="guh">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/mstile-144x144.png?v=QEEbRWmmnY">
+  <meta name="theme-color" content="#ffffff">
+
   <!-- SVG Sprites -->
   <link rel="stylesheet" href="assets/css/ui/sprite.css">
   <link rel="stylesheet" href="assets/css/vendor/sprite.css">
@@ -44,7 +67,7 @@
 
 <body guh-toggle-grid="hide">
   <div ng-class="{ intro: app.$state.is('guh.intro') }" id="main" ui-view></div>
-
+  
   <!-- vendor:js -->
   <!-- endinject -->
 
