Change moods to work with new modal directive and add new structure and logic. Add modal directive to index.

--- a/src/index.html
+++ b/src/index.html
@@ -68,6 +68,7 @@
 <body guh-toggle-grid="hide">
   <!-- <div ui-view id="main" ng-class="app.$state.is('guh.intro') ? 'intro' : 'default'"></div> -->
   <div ui-view class="main"></div>
+  <guh-morph-modal></guh-morph-modal>
   
   <!-- vendor:js -->
   <!-- endinject -->
