Add basic build process with webpack.

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,3 @@
-<!DOCTYPE HTML>
-<!-- Doctype has to be firs: http://stackoverflow.com/questions/941100/can-comments-appear-before-the-doctype-declaration -->
-
 <!-- 
   Copyright (C) 2015 Lukas Mayerhofer <lukas.mayerhofer@guh.guru>
   
@@ -23,57 +20,16 @@
   SOFTWARE.
 -->
 
-<html ng-app="guh">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-  
-  <title>guh</title>
 
-  <!-- Favicon (http://realfavicongenerator.net/) -->
-  <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png?v=QEEbRWmmnY">
-  <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png?v=QEEbRWmmnY">
-  <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png?v=QEEbRWmmnY">
-  <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png?v=QEEbRWmmnY">
-  <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png?v=QEEbRWmmnY">
-  <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png?v=QEEbRWmmnY">
-  <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png?v=QEEbRWmmnY">
-  <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png?v=QEEbRWmmnY">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png?v=QEEbRWmmnY">
-  <link rel="icon" type="image/png" href="/favicon-32x32.png?v=QEEbRWmmnY" sizes="32x32">
-  <link rel="icon" type="image/png" href="/favicon-194x194.png?v=QEEbRWmmnY" sizes="194x194">
-  <link rel="icon" type="image/png" href="/favicon-96x96.png?v=QEEbRWmmnY" sizes="96x96">
-  <link rel="icon" type="image/png" href="/android-chrome-192x192.png?v=QEEbRWmmnY" sizes="192x192">
-  <link rel="icon" type="image/png" href="/favicon-16x16.png?v=QEEbRWmmnY" sizes="16x16">
-  <link rel="manifest" href="/manifest.json?v=QEEbRWmmnY">
-  <link rel="shortcut icon" href="/favicon.ico?v=QEEbRWmmnY">
-  <meta name="apple-mobile-web-app-title" content="guh">
-  <meta name="application-name" content="guh">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/mstile-144x144.png?v=QEEbRWmmnY">
-  <meta name="theme-color" content="#ffffff">
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>guh:app</title>
+  </head>
 
-  <!-- SVG Sprites -->
-  <link rel="stylesheet" href="assets/css/ui/sprite.css">
-  <link rel="stylesheet" href="assets/css/vendor/sprite.css">
-
-  <!-- vendor:css -->
-  <!-- endinject -->
-
-  <!-- app:css -->
-  <!-- endinject -->
-</head>
-
-<body guh-toggle-grid="hide">
-  <!-- <div ui-view id="main" ng-class="app.$state.is('guh.intro') ? 'intro' : 'default'"></div> -->
-  <div ui-view class="main"></div>
-  <guh-morph-modal></guh-morph-modal>
-  
-  <!-- vendor:js -->
-  <!-- endinject -->
-
-  <!-- app:js -->
-  <!-- endinject -->
-</body>
+  <body ng-app="app" ng-strict-di></body>
 </html>
