--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,5 @@
     <title>guh:app</title>
   </head>
 
-  <body ng-app="app" ng-strict-di>
-    <guh-app></guh-app>
-  </body>
+  <body ng-app="app" ng-strict-di ui-view></body>
 </html>
