--- a/src/containers/intro/intro.html
+++ b/src/containers/intro/intro.html
@@ -21,26 +21,11 @@
 -->
 
 
-<!-- Header -->
-<header>
-  <h1>App</h1>
-  <nav>
-    <ul>
-      <li ui-sref-active="active"><a ui-sref="app.dashboard">Dashboard</a></li>
-      <li ui-sref-active="active"><a ui-sref="app.things">Things</a></li>
-      <li ui-sref-active="active"><a ui-sref="app.rules">Rules</a></li>
-    </ul>
-  </nav>
-</header>
+<h3>Intro</h3>
+<pre>{{ intro | json }}</pre>
 
-<!-- Content -->
-<div>
-  <h2>Router</h2>
-  <pre>{{ app.router | json }}</pre>
+<div>Logo</div>
 
-  <h2>Server information</h2>
-  <pre>{{ app.serverInfo | json }}</pre>
-
-  <h2>Intro</h2>
-  <guh-intro></guh-intro>
+<div ng-repeat="step in intro.steps">
+  <guh-dynamic-container type="step.containerType" props="step.containerProps"></guh-dynamic-container>
 </div>
