--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
 <body guh-toggle-grid="hide">
   <!-- <div ui-view id="main" ng-class="app.$state.is('guh.intro') ? 'intro' : 'default'"></div> -->
   <div ui-view class="main"></div>
-  <guh-morph-modal></guh-morph-modal>
+  <guh-modal-container></guh-modal-container>
   
   <!-- vendor:js -->
   <!-- endinject -->
